assets/styles/index.css
/* ... */
.post-seven {
    background: url('/assets/images/articles/article7.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post-eight {
    background: url('/assets/images/articles/article8.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post-nine {
    background: url('/assets/images/articles/article9.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post-ten {
    background: url('/assets/images/articles/article10.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post-eleven {
    background: url('/assets/images/articles/article11.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post-twelve {
    background: url('/assets/images/articles/article12.jpg');
    background-position: bottom;
    background-size: cover;
    background-repeat: no-repeat;
}

.post_overlay {
    height: fit-content;
    display: none;
    position: absolute;
    color: #fff;
    bottom: 0;
    background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
}

.article_link:hover .post_overlay {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 12% 10%;
    text-align: center;
}

.post_heading {
    font-size: 1.4em;
    align-self: center;
    margin-bottom: 0.438em;
}

.post_description {
    font-size: 1em;
    text-align: left;
    align-self :center;
    margin-bottom: 20px;
}

@media only screen and (max-width: 1760px) {
    .article_section {
        margin: 3% 10% 10%;
    }

    .article_wrapper {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
    }
}


@media only screen and (max-width: 1330px) {
    .article_wrapper {
        grid-template-columns: 1fr 1fr;
    }

    .post_overlay {
        display: block;
        position: relative;
        height: auto;
        padding: 12% 10%;
        background: linear-gradient(to top, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.8) 99%);
    }

    .article_link:hover {
        transform: none;
    }
    
    .post_heading {
        text-align: center;
        text-shadow: -2px 2px 2px #888;
    }

    .post_description {
        text-shadow: -2px 2px 2px #999;
    }
}


@media only screen and (max-width: 900px) {
    .article_wrapper {
        grid-template-columns: 1fr;
    }

    .post_heading {
        font-size: 1.6em;
    }

    .post_description {
        font-size: 1.25em;
    }
}


@media only screen and (max-width: 630px) {

    .post_heading {
        font-size: 1.4em;
    }

    .post_description {
        font-size: 1em;
    }
}

@media only screen and (max-width: 450px) {
    .article_section {
        margin: 3% 4% 10%;
    }

    .article_link {
        min-width: 200px;
    }
}


@media only screen and (max-width: 320px) {
    .post_heading {
        font-size: 1em;
    }

    .post_description {
        font-size: .9em;
    }

}
/* Section Two and Video Styles  ------------------------------------------------  */

.newsletter_section {
    margin-bottom: 7%;
}

.video_content-wrapper {
    display: flex;
    height: 650px;
    border-bottom: 20px solid #e26f6f;
}

.video {
    height: 650px;
}

.video_overlay {
    position: absolute;
    height: 650px;
    width: 1155.550px;
    background: -webkit-radial-gradient(50% 55%, ellipse closest-corner, rgba(75, 101, 121, 0.42) 1%, rgba(0, 17, 39, 0.6) 100%);
}

.video_link-wrapper {
    position: absolute;
    height: 650px;
    width: 1155.550px;
}

.video_link {
    color: #fff;
    font-family: "Cambay";
    font-size: 3em;
    font-weight: 800;
    letter-spacing: 1px;
    text-shadow: -2px 2px 1px #777;
    text-decoration: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 99;
}

@media only screen and (max-width: 1900px) {
    .video_content-wrapper {
        display: flex;
        height: 534.347px;
        border-bottom: 20px solid #e26f6f;
    }

    .video {
        height: auto;
        width: 950px;
    }

    .video_overlay {
        height: 534.347px;
        width: 950px;
    }

    .video_link-wrapper {
        position: absolute;
        height: 534.347px !important;
        width: 950px;
    }

    .video_link-wrapper {
        position: absolute;
        height: 650px;
        width: 950px;
    }
}

@media only screen and (max-width: 1472px) {
    .video_content-wrapper {
        display: flex;
        height: 393.750px;
        border-bottom: 20px solid #e26f6f;
    }

    .video {
        height: auto;
        width: 700px;
    }

    .video_overlay {
        height: 393.750px;
        width: 700px;
    }

    .video_link-wrapper {
        position: absolute;
        height: 393.750px !important;
        width: 700px;
    }

    .video_link {
        font-size: 2em;
    }
}

@media only screen and (max-width: 1200px) {

    .newsletter_section {
        display: none;
    }

}

/* content in video section Styles  ------------------------------------------------  */

.content_right-wrapper {
    width: 100%;
    padding: 95px 100px;
    background-color: #2d3240;
}

.content_paragraph {
    font-size: 1em;
    opacity: 0.7;
    width: 57%;
    margin-bottom: 2.500em;
}

.content_heading {
    margin-bottom: 2em;
}

.content_logo {
    height: 125px;
    width: 125px;
    border-radius: 6px;
    filter: drop-shadow(-1px 1px 1px #777);
    margin-bottom: 2.500em;
}

.content_button {
    color: #fff;
    font-size: 13px;
    line-height: 1em;
    text-decoration: none;
    border: 1px solid #fff;
    width: 100%;
    padding: 12px 50px 7px;
    transition: .3s;
    border-radius: 5px;
}

.content_button:hover {
    color: #000;
    background-color: #fff;
}
/* ... */

